fix styles (theme dark imgs brightness & contrast)

--- a/styles/_blocks.sass
+++ b/styles/_blocks.sass
@@ -42,9 +42,6 @@
 
     img
       width: 24px
-      @include mixins.theme(dark)
-        opacity: 0.8
-
 
 .cover
   float: left
@@ -57,7 +54,6 @@
 
   @include mixins.theme(dark)
     border: 1px solid colors.$white-20
-    opacity: 0.9
 
 
   @include mixins.mq('desktop')
