--- a/styles/_footer.sass
+++ b/styles/_footer.sass
@@ -31,6 +31,3 @@ footer
 
   .buy-coffee-button
     height: 2rem
-
-    @include mixins.theme(dark)
-      opacity: 0.8
