--- a/styles/main.sass
+++ b/styles/main.sass
@@ -29,6 +29,10 @@ body
     color: colors.$white-80
     background-color: colors.$soft-black
 
+body img
+  @include mixins.theme(dark)
+    filter: brightness(.8) contrast(1.2)
+
 
 h1, h2
   font-family: Cambria, Georgia, Times, 'Times New Roman', serif
